splayd 1.0.6:
	- major performance improvements in splay.benc module (function encode completely rewritten)
	- minor performance improvement in splay.misc module, function split (made simpler and faster) 
-----------------------------
splayd 1.0.5:
	- fix in async_dns: improve compatibility with LuaSocket's dns calls
-----------------------------
splayd 1.0.4:
 	- fix bug when using async_dns inside controller
-----------------------------
splayd 1.0.3:
	- allow splay.async_dns inside sandbox, modifications in jobd.lua
-----------------------------
splayd 1.0.2:
	- bug fix in splay.urpc: missing require 'tonumber' used for sanity check
	  	 in timeout values before sending an rpc call
-----------------------------
splayd 1.0.1:
        - bug fix in splay.urpc and splay.net when a specific IP port is used
  		  to start the server
-----------------------------
splayd 1.0:
        - async DNS resolution with new module splay.async_dns
        - some bug fixes and todo's done.
-----------------------------
splayd 0.962 => splayd 0.9621:
-----------------------------

	- Corrections in manual. The reference manual is online only (rev516)
	- Corrections in INSTALL.macosx
	- sandboxed functions are replaced by empty stubs (rev489).
		 When calling a sandboxed function, the following is executed instead:
		 function foo() 
			log:print("Function foo() is sandboxed -- usage not allowed. Aborting.")
			events.sleep(10)
			os.exit()
		  end
	- Changes in Makefile,Makefile.macosx and install.sh : the native modules are 
	  compiled directly with their final names


splayd 0.961 => splayd 0.962:
-----------------------------

	Changes (NOT backward compatible):
		- misc.random_pick(a, x) return an array if x == 1 but one element if
			not x (=> x = 1 but not returning an array). The documentation was not
			clear about this point and if x = 1 an array was not returned.


splayd 0.96 => splayd 0.961:
----------------------------

	Bugs/Improvements: